@@ -4,29 +4,31 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
-import lombok.val;
 import org.sopt.makers.internal.common.util.InfiniteScrollUtil;
-import org.sopt.makers.internal.internal.InternalMemberDetails;
 import org.sopt.makers.internal.project.domain.Project;
-import org.sopt.makers.internal.exception.WrongImageInputException;
-import org.sopt.makers.internal.project.mapper.ProjectResponseMapper;
 import org.sopt.makers.internal.project.dto.request.ProjectSaveRequest;
 import org.sopt.makers.internal.project.dto.request.ProjectUpdateRequest;
-import org.sopt.makers.internal.project.dto.response.ProjectAllResponse;
-import org.sopt.makers.internal.project.dto.response.ProjectDetailResponse;
-import org.sopt.makers.internal.project.dto.response.ProjectLinkDao;
+import org.sopt.makers.internal.project.dto.response.allProject.ProjectAllResponse;
+import org.sopt.makers.internal.project.dto.response.allProject.ProjectResponse;
+import org.sopt.makers.internal.project.dto.response.detailProject.ProjectDetailResponse;
 import org.sopt.makers.internal.project.service.ProjectService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.*;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
@@ -35,15 +37,12 @@ import java.util.stream.Collectors;
 @Tag(name = "Project 관련 API", description = "Project와 관련 API들")
 public class ProjectController {
     private final ProjectService projectService;
-    private final ProjectResponseMapper projectMapper;
     private final InfiniteScrollUtil infiniteScrollUtil;
 
     @Operation(summary = "Project id로 조회 API")
     @GetMapping("/{id}")
     public ResponseEntity<ProjectDetailResponse> getProject (@PathVariable Long id) {
-        val projectMembers = projectService.fetchById(id);
-        val projectLinks = projectService.fetchLinksById(id);
-        val response = projectMapper.toProjectDetailResponse(projectMembers, projectLinks);
+        ProjectDetailResponse response = projectService.getProjectDetailResponseById(id);
         return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
@@ -60,17 +59,16 @@ public class ProjectController {
             @RequestParam(required = false, name = "isAvailable") Boolean isAvailable,
             @RequestParam(required = false, name = "isFounding") Boolean isFounding
     ) {
-        val projectMap = projectService.fetchAll(infiniteScrollUtil.checkLimitForPagination(limit), cursor, name, category, isAvailable, isFounding)
-                .stream().collect(Collectors.toMap(Project::getId, Function.identity()));
-        val projectLinkMap = projectService.fetchAllLinks().stream()
-                .collect(Collectors.groupingBy(ProjectLinkDao::id, Collectors.toList()));
-        val projectIds = projectMap.keySet();
-        val projectList = projectIds.stream().sorted(Collections.reverseOrder())
-                .map(id -> projectMapper.toProjectResponse(projectMap.get(id), projectService.fetchById(id), projectLinkMap.getOrDefault(id, List.of())))
-                .collect(Collectors.toList());
-        val hasNextProject = infiniteScrollUtil.checkHasNextElement(limit, projectList);
-        val totalProjectsCount = projectService.getProjectsCount(name, category, isAvailable, isFounding);
-        val responses = new ProjectAllResponse(projectList, hasNextProject, totalProjectsCount);
+        List<Project> projectList = projectService.fetchAll(infiniteScrollUtil.checkLimitForPagination(limit),
+                        cursor, name, category, isAvailable, isFounding);
+        List<ProjectResponse> projectResponseList = new ArrayList<>(
+                projectService.getAllProjectResponseList(projectList).stream()
+                        .sorted(Comparator.comparing(ProjectResponse::id).reversed())
+                        .toList());
+        Boolean hasNextProject = infiniteScrollUtil.checkHasNextElement(limit, projectResponseList);
+        int totalProjectsCount = projectService.getProjectsCount(name, category, isAvailable, isFounding);
+
+        ProjectAllResponse responses = new ProjectAllResponse(projectResponseList, hasNextProject, totalProjectsCount);
         return ResponseEntity.status(HttpStatus.OK).body(responses);
     }
 
@@ -85,11 +83,10 @@ public class ProjectController {
     @PutMapping("/{id}")
     public ResponseEntity<Map<String, Boolean>> updateProject (
             @PathVariable("id") Long projectId,
-            @Parameter(hidden = true) @AuthenticationPrincipal InternalMemberDetails memberDetails,
+            @Parameter(hidden = true) @AuthenticationPrincipal Long userId,
             @RequestBody ProjectUpdateRequest request
     ) {
-        Long writerId = memberDetails.getId();
-        projectService.updateProject(writerId, projectId, request);
+        projectService.updateProject(userId, projectId, request);
         return ResponseEntity.status(HttpStatus.OK).body(Map.of("success", true));
     }
 
@@ -97,10 +94,9 @@ public class ProjectController {
     @DeleteMapping("/{id}")
     public ResponseEntity<Map<String, Boolean>> delteProject (
             @PathVariable("id") Long projectId,
-            @Parameter(hidden = true) @AuthenticationPrincipal InternalMemberDetails memberDetails
+            @Parameter(hidden = true) @AuthenticationPrincipal Long userId
     ) {
-        val writerId = memberDetails.getId();
-        projectService.deleteProject(writerId, projectId);
+        projectService.deleteProject(userId, projectId);
         return ResponseEntity.status(HttpStatus.OK).body(Map.of("success", true));
     }
 }
